[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Серж Рыж <126515806+playginger@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2023.2"
django = "4.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-welcome = "cli:welcome"