[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["Серж Рыж <126515806+playginger@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "electronics_shop_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
